--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Example Fiverr Portfolio</title>
-<!--<link rel = "icon" href = "favicon.png">-->
+<title>Amar Omerovič</title>
+<link rel = "icon" href = "favicon.png">
 <link rel="stylesheet" href="main.css">
-<meta name="keywords" content="Template, Html, CSS">
-<meta name="description" content="Fiverr, Freelance, money, capitalism">
-<meta name="author" content="Fiverr Fiverrina">
+<meta name="keywords" content="Portfolio, HTML, CSS, amidev">
+<meta name="description" content="Amar Omerovič's web dev portfolio.">
+<meta name="author" content="Amar Omerovič">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.gstatic.com">
