--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="header">
 <h1 id="h1w">Amar Omerovič</h1>
 <p id="textw">A professional web developer.</p><br><br>
-<div id="button"><a href="mailto:onexindie@gmail.com"><p id="textwi">Contact me</p></a></div>
+<div id="button"><a href="mailto:amidev@protonmail.com"><p id="textwi">Contact me</p></a></div>
 </div>
 
 <div class="content2">
