--- a/index.html
+++ b/index.html
@@ -16,13 +16,21 @@
 <center>
 <div class="header">
 <h1 id="h1w">Amar Omerovič</h1>
-<p id="textw">A professional web developer.</p><br><br>
+<p id="textw">A web developer.</p><br><br>
 <div id="button"><a href="mailto:amidev@protonmail.com"><p id="textwi">Contact me</p></a></div>
 </div>
 
 <div class="content2">
 <h1 id="wh1">Hello!</h1>
-<p id="wt">I'm Amar Omerovič, a professional web developer with around 3 years of experience in web development. I worked on over 70 projects based on HTML and CSS. I assure you that your website will be simple, reliable, responsive, and have everything you will need. I will list some examples of my work below:</p><br><br>
+<p id="wt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nulla justo, tempus non hendrerit in, viverra non sem. Integer tempus, enim vitae venenatis luctus, mi orci luctus sem, eu lacinia ex quam quis velit. Curabitur laoreet porttitor faucibus. Vestibulum lectus nunc, sollicitudin ut consequat eget, sagittis sit amet felis. In vel diam eu diam cursus euismod sit amet vitae leo. Proin sollicitudin sed diam ut gravida. Etiam feugiat turpis arcu, lacinia interdum augue posuere ac. Vestibulum quis lectus consectetur, sagittis risus sodales, laoreet odio. Nulla posuere nisi purus, quis semper ipsum auctor vitae. Nunc lacinia eros a turpis laoreet ultrices. Mauris rhoncus dolor ac sagittis varius. Donec quis tempor nunc. Donec nec faucibus felis. Proin in dui ornare, aliquam metus sit amet, aliquam velit.
+
+Mauris a leo elit. Donec facilisis non est in aliquam. Quisque elementum nisi a commodo porttitor. Etiam mattis pharetra ipsum, vitae rutrum lorem. Phasellus vitae efficitur orci. Suspendisse ornare sagittis risus, sed facilisis ligula varius vitae. In eu massa et libero blandit sagittis commodo eget ipsum. Fusce molestie, mi vel lacinia hendrerit, ante lacus facilisis orci, vitae fermentum nisi metus vel enim. Etiam tempus tortor ac venenatis dapibus. Vestibulum quam velit, elementum rutrum dolor in, accumsan viverra nulla. Duis ornare lorem eu leo mattis euismod. Ut laoreet imperdiet nisl eu ornare. Sed ac est sollicitudin, ornare odio id, tincidunt orci.
+
+Curabitur mollis dictum urna, sed pulvinar dui consequat vitae. Nulla facilisi. In varius posuere arcu eu tempus. Aenean euismod nisi quis finibus aliquet. Morbi rutrum augue nec lectus tincidunt blandit. Mauris pellentesque quam at lorem venenatis, non condimentum nisi hendrerit. Etiam a metus lectus. Curabitur facilisis nulla arcu, a iaculis tortor finibus porttitor. In dapibus pharetra metus eu fringilla. Ut tempor varius sem, in facilisis erat consequat tincidunt. Vestibulum sed sem enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec ornare purus ex, dapibus iaculis mi viverra non. Donec nec maximus urna, non feugiat turpis. Quisque vitae nibh id mauris congue dapibus vel sed ipsum. Maecenas eu lorem elit.
+
+Vivamus vitae diam eget lorem rutrum imperdiet. Ut fermentum magna turpis, at aliquam nisi tincidunt id. Vivamus placerat aliquam fermentum. Nunc pharetra dolor molestie neque vestibulum feugiat. Cras fringilla id nunc ut pretium. Nullam vestibulum, turpis nec malesuada imperdiet, orci nunc auctor sapien, ac gravida quam tellus sit amet odio. Ut lectus tortor, facilisis non risus at, posuere faucibus justo. Suspendisse pretium velit placerat, convallis sapien vel, fringilla metus. Phasellus elit leo, malesuada ut tincidunt non, aliquam pulvinar sem. Phasellus at neque sit amet augue pharetra cursus. Pellentesque consequat erat in purus eleifend commodo. Vestibulum posuere pellentesque odio, nec tempus purus aliquam nec. Phasellus vel sapien enim.
+
+In hac habitasse platea dictumst. In lacinia sollicitudin ex, quis accumsan justo facilisis nec. Curabitur ac tortor ac urna tincidunt tristique. Sed dapibus rhoncus purus, a tincidunt lorem ultricies sit amet. Maecenas et sem pulvinar justo pulvinar commodo. Donec elit diam, rutrum quis dapibus id, fermentum quis leo. Maecenas pretium diam lectus, quis porta velit egestas in. Etiam ultricies eros eget finibus tincidunt. Praesent ipsum nisl, luctus sit amet massa in, lobortis imperdiet lorem. Nam in dolor nisi. Donec scelerisque odio faucibus elit interdum lobortis. Morbi nec mi volutpat, euismod felis non, imperdiet urna. Pellentesque pellentesque rhoncus nisl, a porta justo varius sed.</p><br><br>
 <div id="button"><a href=""><p id="textwil">Click Here</p></a></div><br><br><div id="button"><a href=""><p id="textwil">Click Here</p></a></div><br><br><div id="button"><a href=""><p id="textwil">Click Here</p></a></div><br><br>
 </div>
 <br>
