--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <center>
 <div class="header">
 <h1 id="h1w">Amar Omerovič</h1>
-<p id="textw">A web developer.</p><br><br>
+<p id="textw">A professional web developer.</p><br><br>
 <div id="button"><a href="mailto:amidev@protonmail.com"><p id="textwi">Contact me</p></a></div>
 </div>
 
 <div class="content2">
 <h1 id="wh1">Hello!</h1>
-<p id="wt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nulla justo, tempus non hendrerit in, viverra non sem. Integer tempus, enim vitae venenatis luctus, mi orci luctus sem, eu lacinia ex quam quis velit. Curabitur laoreet porttitor faucibus. Vestibulum lectus nunc, sollicitudin ut consequat eget, sagittis sit amet felis. In vel diam eu diam cursus euismod sit amet vitae leo. Proin sollicitudin sed diam ut gravida. Etiam feugiat turpis arcu, lacinia interdum augue posuere ac. Vestibulum quis lectus consectetur, sagittis risus sodales, laoreet odio. Nulla posuere nisi purus, quis semper ipsum auctor vitae.</p><br><br>
+<p id="wt">I'm Amar Omerovič, a professional web developer with around 3 years of experience in web development. I worked on over 70 projects based on HTML and CSS. I assure you that your website will be simple, reliable, responsive, and have everything you will need. I will list some examples of my work below:</p><br><br>
 <div id="button"><a href=""><p id="textwil">Click Here</p></a></div><br><br><div id="button"><a href=""><p id="textwil">Click Here</p></a></div><br><br><div id="button"><a href=""><p id="textwil">Click Here</p></a></div><br><br>
 </div>
 <br>
