--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
 <div class="content2">
 <h1 id="wh1">Hello!</h1>
-<p id="wt">I'm Amar Omerovič (Ami), a professional web developer with around 3 years of experience in web development. I worked on over 70 projects based on HTML and CSS. I assure you that your website will be simple, reliable, responsive, and have everything you will need. I will list some examples of my work below:</p><br><br>
+<p id="wt">I'm Amar Omerovič, a professional web developer with around 3 years of experience in web development. I worked on over 70 projects based on HTML and CSS. I assure you that your website will be simple, reliable, responsive, and have everything you will need. I will list some examples of my work below:</p><br><br>
 <div id="button"><a href=""><p id="textwil">Click Here</p></a></div><br><br><div id="button"><a href=""><p id="textwil">Click Here</p></a></div><br><br><div id="button"><a href=""><p id="textwil">Click Here</p></a></div><br><br>
 </div>
 <br>
 <p id="text">© 2021 Amar Omerovič</p>
-<div id="button"><a href="https://github.com/OnexIndieStudios"><p id="textwi">Github</p></a></div> <div id="button"><a href="https://www.instagram.com/amidev.pro/"><p id="textwi">Instagram</p></a></div> <div id="button"><a href="https://twitter.com/OnexIndie"><p id="textwi">Twitter</p></a></div>
+<div id="button"><a href="https://github.com/OnexIndieStudios"><p id="textwi">Github</p></a></div> <div id="button"><a href="https://www.instagram.com/amidev.pro/"><p id="textwi">Instagram</p></a></div> <div id="button"><a href="https://twitter.com/OnexIndie"><p id="textwi">Twitter</p></a></div> <div id="button"><a href="https://amidevpro.itch.io/"><p id="textwi">Itch.io</p></a></div>
 </center>
 </body>
 </html>
