--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 <br>
 <p id="text">© 2021 Amar Omerovič</p>
-<div id="button"><a href="https://github.com/OnexIndieStudios"><p id="textwi">Github</p></a></div> <div id="button"><a href="https://www.instagram.com/amidev.pro/"><p id="textwi">Instagram</p></a></div> <div id="button"><a href="https://twitter.com/OnexIndie"><p id="textwi">Twitter</p></a></div> <div id="button"><a href="https://amidevpro.itch.io/"><p id="textwi">Itch.io</p></a></div>
+<div id="button"><a href="https://github.com/OnexIndieStudios"><p id="textwi">Github</p></a></div> <div id="button"><a href="https://www.instagram.com/amidev.pro/"><p id="textwi">Instagram</p></a></div> <div id="button"><a href="https://twitter.com/OnexIndie"><p id="textwi">Twitter</p></a></div> <div id="button"><a href="https://amidevpro.itch.io/"><p id="textwi">Itch.io</p></a></div> <div id="button"><a href="https://www.linkedin.com/in/amar-omerovic-83ab1120b/"><p id="textwi">linkedin</p></a></div>
 </center>
 </body>
 </html>
