--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="content2">
 <h1 id="wh1">Hello!</h1>
-<p id="wt">I'm Amar Omerovič, a professional web developer with around 3 years of experience in web development. I worked on over 70 projects based on HTML and CSS. I assure you that your website will be simple, reliable, responsive, and have everything you will need.<br><br></p>
+<p id="wt">I'm Amar Omerovič, a professional web developer with around 3 years of experience in web development. I worked on over 70 projects based on HTML and CSS. I assure you that your website will be simple, reliable, responsive, and have everything you will need.<br></p>
 <br>
 </div>
 <br>
