--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="content2">
 <h1 id="wh1">Hello!</h1>
-<p id="wt">I'm Amar Omerovič, a professional web developer with around 3 years of experience in web development. I worked on over 70 projects based on HTML and CSS. I assure you that your website will be simple, reliable, responsive, and have everything you will need.<br></p>
+<p id="wt">Im Amar Omerovič, a teenage programmer & web designer. Im very good at html, css and php. Im also avalabile as a freelancer, so if you want to contact me, <a href="mailto:amidev@protonmail.com">click here</a> or email me at <strong>amidev@protonmail.com</strong>.
 <br>
 </div>
 <br>
