--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<link rel="icon" href="favicon.png" type="image/png">
 <meta charset="UTF-8">
 <title>Amar Omerovič</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
