--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link rel="icon" href="favicon.png" type="image/png">
 <meta charset="UTF-8">
 <title>Amar Omerovič</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,6 +21,30 @@ h1 {font-family: 'Noto Sans Mono', monospace;}
 
 a {
   color: #0000EE;
+  font-family: 'Noto Sans Mono', monospace;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  font-family: 'Noto Sans Mono', monospace;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  color: red;
 }
 
 </style>
@@ -30,11 +53,15 @@ a {
 
 <div style="text-align: center;">
 
+<hr>
+<ul>
+ <li><a href="viri.html">Viri za učenje</a></li>
+</ul>
+<hr>
+
 <img src="bruh.png" class="center">
 
 <h1>- Amar Omerovič -</h1>
-
-<br>
 
 <a href="zacetek.html"><h1>Začetek moje poti</h1></a>
 <a href="obrni.html"><h1>Obrni besedo</h1></a>
