--- a/viri.html
+++ b/viri.html
@@ -26,6 +26,13 @@ a {
   font-family: 'Noto Sans Mono', monospace;
 }
 
+table, th, td {
+  border: 1px solid black;
+  font-family: 'Noto Sans Mono', monospace;
+}
+
+table{margin-left: auto; margin-right: auto;}
+
 </style>
 
 <body>
@@ -33,17 +40,26 @@ a {
 <div style="text-align: center;">
 <img src="bruh.png" class="center">
 
+
 <h1>- Amar Omerovič -</h1>
 
 <br>
 
-<h1>Obrni besedo</h1>
-<p>Ta program obrne besedo (ime). To je moj začetniški projekt, zato rešitev ni optimalna.</p> 
+<table>
+  <tr>
+    <th>Avtor:</th>
+    <th>Ime:</th>
+  </tr>
+  <tr>
+    <td>Borut Jurčič Zlobec / zotks</td>
+	<td><a href="http://matematika.fe.uni-lj.si/html/people/borut/scratch/Python_vaja.html">Python vaje</a></td>
+  </tr>
+   <tr>
+    <td>Borut Jurčič Zlobec / zotks</td>
+	<td><a href="http://matematika.fe.uni-lj.si/html/people/borut/scratch/Python_resitev.html">Python rešitve</a></td>
+  </tr>
+  </table>
 
-<br>
-
-<a href="test.c"><img src="df.png" width="50px" height="50px"></a>&nbsp;&nbsp;&nbsp;<a href="test.exe"><img src="df.png" width="50px" height="50px"></a>
-<p>koda&nbsp;&nbsp;&nbsp;exe</p>
 <br>
 <a href="index.html">pojdi nazaj</a>
 
