--- a/zacetek.html
+++ b/zacetek.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link rel="icon" href="favicon.png" type="image/png">
 <meta charset="UTF-8">
 <title>Amar Omerovič</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -24,6 +23,7 @@ p {font-family: 'Noto Sans Mono', monospace; font-weight: 300;}
 
 a {
   color: #0000EE;
+  font-family: 'Noto Sans Mono', monospace;
 }
 
 </style>
@@ -43,7 +43,7 @@ a {
 <h1>Zakaj C?</h1>
 <p>Zato, ker bo 13. januarja 2022 potekalo tekmovanje programiranja za osnovne šole, ki ga je organizirala <a href="https://www.zotks.si/programiranje/razpis/">Zotks</a>. C je bil najboljša izbira zato, ker je njegov mlajši brat C++ najbolj uporabljen programski jezik na olimpijadah programiranja, C in C++ pa sta si zelo podobna.</p>
 <h1>Pomen te spletne strani</h1>
-<p>Na tej spletni strani bom obljavljal svoj napredek pri učenju Cja zato, da si lahko z to spletno stranjo pomagajo še drugi. Navedel bom tudi vire, ki mi bodo najbolj pomagali.<br><br>Upam, da ti je ta spletna stran všeč!<br><br><a href="index.html">pojdi nazaj</a></p>
+<p>Na tej spletni strani bom obljavljal svoj napredek pri učenju Cja zato, da si lahko z to spletno stranjo pomagajo še drugi. Navedel bom tudi <a href="viri.html">vire</a>, ki mi bodo najbolj pomagali.<br><br>Upam, da ti je ta spletna stran všeč!<br><br><a href="index.html">pojdi nazaj</a></p>
 </div>
 
 </body>
