--- a/najmanjnajvec.html
+++ b/najmanjnajvec.html
@@ -19,32 +19,11 @@
 
 h1 {font-family: 'Noto Sans Mono', monospace;}
 
+p {font-family: 'Noto Sans Mono', monospace; font-weight: 300;}
+
 a {
   color: #0000EE;
   font-family: 'Noto Sans Mono', monospace;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  font-family: 'Noto Sans Mono', monospace;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  color: red;
 }
 
 </style>
@@ -52,20 +31,21 @@ li a:hover {
 <body>
 
 <div style="text-align: center;">
-
-<hr>
-<ul>
- <li><a href="viri.html">Viri za učenje</a></li>
-</ul>
-<hr>
-
 <img src="bruh.png" class="center">
 
 <h1>- Amar Omerovič -</h1>
 
-<a href="zacetek.html"><h1>Začetek moje poti</h1></a>
-<a href="obrni.html"><h1>Obrni besedo</h1></a>
-<a href="najmanjnajvec.html"><h1>Od najmanjšega do največjega</h1></a>
+<br>
+
+<h1>Od najmanjšega do največjega</h1>
+<p>Ta program sortira 10 števil od najmanjšega do največjega.</p> 
+
+<br>
+
+<a href="solve.c"><img src="df.png" width="50px" height="50px"></a>&nbsp;&nbsp;&nbsp;<a href="solve.exe"><img src="df.png" width="50px" height="50px"></a>
+<p>koda&nbsp;&nbsp;&nbsp;exe</p>
+<br>
+<a href="index.html">pojdi nazaj</a>
 
 </div>
 
