--- a/najmanjnajvec.html
+++ b/najmanjnajvec.html
@@ -45,7 +45,7 @@ a {
 <a href="solve.c"><img src="df.png" width="50px" height="50px"></a>&nbsp;&nbsp;&nbsp;<a href="solve.exe"><img src="df.png" width="50px" height="50px"></a>
 <p>koda&nbsp;&nbsp;&nbsp;exe</p>
 
-<iframe style="border: 3px solid;" width="560" height="315" src="https://www.youtube-nocookie.com/embed/xli_FI7CuzA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xli_FI7CuzA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
 
