--- a/najmanjnajvec.html
+++ b/najmanjnajvec.html
@@ -26,6 +26,8 @@ a {
   font-family: 'Noto Sans Mono', monospace;
 }
 
+div {margin: auto;}
+
 </style>
 
 <body>
@@ -45,7 +47,9 @@ a {
 <a href="solve.c"><img src="df.png" width="50px" height="50px"></a>&nbsp;&nbsp;&nbsp;<a href="solve.exe"><img src="df.png" width="50px" height="50px"></a>
 <p>koda&nbsp;&nbsp;&nbsp;exe</p>
 
+<div style="width: 560px; height: 315px; border: 3px solid;">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xli_FI7CuzA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 <br>
 
