--- a/najmanjnajvec.html
+++ b/najmanjnajvec.html
@@ -35,7 +35,7 @@ div {margin: auto;}
 <div style="text-align: center;">
 <img src="bruh.png" class="center">
 
-<h1>- Amar Omerovič -</h1>
+<h1>Amar Omerovič</h1>
 
 <br>
 
