--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ li a:hover {
 
 <img src="bruh.png" class="center">
 
-<h1>- Amar Omerovič -</h1>
+<h1>Amar Omerovič</h1>
 
 <a href="zacetek.html"><h1>Začetek moje poti</h1></a>
 <a href="obrni.html"><h1>Obrni besedo</h1></a>
