--- a/viri.html
+++ b/viri.html
@@ -41,7 +41,7 @@ table{margin-left: auto; margin-right: auto;}
 <img src="bruh.png" class="center">
 
 
-<h1>Amar Omerovič</h1>
+<h1>- Amar Omerovič -</h1>
 
 <br>
 
