--- a/obrni.html
+++ b/obrni.html
@@ -33,7 +33,7 @@ a {
 <div style="text-align: center;">
 <img src="bruh.png" class="center">
 
-<h1>Amar Omerovič</h1>
+<h1>- Amar Omerovič -</h1>
 
 <br>
 
