--- a/viri.html
+++ b/viri.html
@@ -58,7 +58,12 @@ table{margin-left: auto; margin-right: auto;}
     <td>Borut Jurčič Zlobec / zotks</td>
 	<td><a href="http://matematika.fe.uni-lj.si/html/people/borut/scratch/Python_resitev.html">Python rešitve</a></td>
   </tr>
-  </table>
+  </tr>
+   <tr>
+	   <td> Code forces / harbour space uni </td>
+	<td><a href="http://matematika.fe.uni-lj.si/html/people/borut/scratch/Python_resitev.html">DOBRA VAJA</td></a>
+  </tr>
+</table>
 
 <br>
 <a href="index.html">pojdi nazaj</a>
