--- a/viri.html
+++ b/viri.html
@@ -61,7 +61,7 @@ table{margin-left: auto; margin-right: auto;}
   </tr>
    <tr>
 	   <td> Code forces / harbour space uni </td>
-	<td><a href="http://matematika.fe.uni-lj.si/html/people/borut/scratch/Python_resitev.html">DOBRA VAJA</td></a>
+	<td><a href="https://codeforces.com/problemset/problem/1612/A">DOBRA VAJA</td></a>
   </tr>
 </table>
 
