--- a/viri.html
+++ b/viri.html
@@ -60,8 +60,8 @@ table{margin-left: auto; margin-right: auto;}
   </tr>
   </tr>
    <tr>
-	   <td> Code forces / harbour space uni </td>
-	<td><a href="https://codeforces.com/problemset/problem/1612/A">DOBRA VAJA</td></a>
+	   <td>Codeforces</td>
+	<td><a href="codeforces.si">codeforces.si</a></td>
   </tr>
 </table>
 
