--- a/viri.html
+++ b/viri.html
@@ -61,7 +61,7 @@ table{margin-left: auto; margin-right: auto;}
   </tr>
    <tr>
 	   <td>Codeforces</td>
-	<td><a href="codeforces.si">codeforces.si</a></td>
+	<td><a href="codeforces.com">codeforces.com</a></td>
   </tr>
 </table>
 
