--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ li{margin-top: 10px;}
 
  <h1 class="name">Amar Omerovič</h1>
 
- <a href="https://www.google.com/"><img src="rss-icon.png" class="rss links"></a>
+ <a href="https://www.amidev.pro/rss.xml"><img src="rss-icon.png" class="rss links"></a>
 
  <a href="https://twitter.com/amaromerovich"><img src="twitter-icon.png" class="twtr links"></a>
 
