--- a/index.html
+++ b/index.html
@@ -68,19 +68,30 @@ li{margin-top: 10px;}
 
  <h1 class="name">Amar Omerovič</h1>
 
- <a href="https://www.amidev.pro/rss.xml"><img src="rss-icon.png" class="rss links"></a>
+ <a href="https://www.google.com/"><img src="rss-icon.png" class="rss links"></a>
 
  <a href="https://twitter.com/amaromerovich"><img src="twitter-icon.png" class="twtr links"></a>
 
  <a href="https://www.youtube.com/channel/UCzV7BA8qK9dZCt4IAp3p60A"><img src="yt.png" class="yt links"></a>  
  
- <fieldset>
+ <fieldset style="margin-bottom: 0px;">
     <legend><span style="margin: 10px;">Moje delo</span></legend>
 
 	<ul style="list-style-position: inside; list-style-type: none; margin: 0; padding: 0;">
     <li>Projekt</li>
     <li>Raziskovalna 1</li>
     <li>Raziskovalna 2</li>
+    </ul> 
+
+ </fieldset>
+ 
+ <fieldset>
+    <legend><span style="margin: 10px;">Blog</span></legend>
+
+	<ul style="list-style-position: inside; list-style-type: none; margin: 0; padding: 0;">
+    <li>28. februar, 2022, blog post 3</li>
+    <li>26. februar, 2022, blog post 2</li>
+    <li>27. februar, 2022, blog post 1</li>
     </ul> 
 
  </fieldset>
